--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Minutos Escuchados (Recientes)</title>
   <style>
     body {
@@ -14,19 +14,17 @@
 
     .container {
       background-color: #C8A2C8;
-      padding: 20px;
+      padding-top: 10px;
       min-height: 100vh;
       border-radius: 30px;
       border: 3px dotted aqua;
       box-shadow: 10px 10px 0px 0px palevioletred;
       text-align: center;
-      margin: 30px auto;
-      max-width: 600px;
+      margin: 30px;
     }
 
     h1 {
       color: aqua;
-      border-radius: 30px;
     }
 
     .minutes-fixed {
@@ -52,7 +50,7 @@
       border-radius: 30px;
       border-style: dotted;
       border-color: rgb(140, 14, 104);
-      margin: 10px 0;
+      margin-top: 20px;
       cursor: pointer;
       font-weight: bold;
     }
@@ -94,13 +92,13 @@
   <div class="container">
     <h1>Minutos Escuchados (Recientes)</h1>
     <button id="login">Conectar con Spotify</button>
-    <button id="reset">Borrar Minutos</button>
+    <button id="clearData">Borrar minutos guardados</button>
     <div id="output"></div>
   </div>
 
   <script>
     const clientId = "c2d05e3f90e645a1828661c9d618f0d1";
-    const redirectUri = "http://127.0.0.1:5500/spotify.html";
+    const redirectUri = window.location.origin + window.location.pathname;
     const scope = "user-read-recently-played";
 
     function generateRandomString(length) {
@@ -139,9 +137,9 @@
       window.location = "https://accounts.spotify.com/authorize?" + args;
     });
 
-    document.getElementById("reset").addEventListener("click", () => {
+    document.getElementById("clearData").addEventListener("click", () => {
       localStorage.removeItem("minutosRecientes");
-      document.getElementById("output").innerHTML = `<div class="minutes-fixed">0 minutos</div><div class="update-note">Minutos reiniciados.</div>`;
+      location.reload();
     });
 
     async function fetchAccessToken(code) {
@@ -157,9 +155,7 @@
 
       const response = await fetch("https://accounts.spotify.com/api/token", {
         method: "POST",
-        headers: {
-          "Content-Type": "application/x-www-form-urlencoded"
-        },
+        headers: { "Content-Type": "application/x-www-form-urlencoded" },
         body: body
       });
 
@@ -169,9 +165,7 @@
 
     async function getRecentTracks(token) {
       const response = await fetch("https://api.spotify.com/v1/me/player/recently-played?limit=50", {
-        headers: {
-          Authorization: `Bearer ${token}`
-        }
+        headers: { Authorization: `Bearer ${token}` }
       });
 
       const data = await response.json();
@@ -194,7 +188,6 @@
       const totalMinutes = Math.round(totalMs / 60000);
       const stored = parseInt(localStorage.getItem("minutosRecientes") || "0");
       const updated = stored + totalMinutes;
-
       localStorage.setItem("minutosRecientes", updated);
 
       const output = document.getElementById("output");
@@ -218,7 +211,7 @@
     if (code) {
       fetchAccessToken(code).then(token => {
         getRecentTracks(token);
-        window.history.replaceState({}, document.title, "/spotify.html");
+        window.history.replaceState({}, document.title, redirectUri);
       }).catch(err => {
         document.getElementById("output").innerHTML = `<p style="color:red;">Error: ${err.message}</p>`;
       });
