--- a/index.html
+++ b/index.html
@@ -3,229 +3,134 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🎊 Feliz cumple nozo 🎊</title>
+  <title> 🌟 nozo 🌟</title>
+  
   <style>
-    body {
-      background-color: rgb(248, 71, 218);
-      font-family: 'Segoe UI', sans-serif;
-      color: rgb(232, 48, 155);
+    #miFormulario
+    { background-color: #C8A2C8;
+    padding-top: 10px;
+    height: 919px;
+
+    color:rgb(232, 48, 155);
+    border-radius: 30px;
+    border-color: rgb(24, 44, 129);
+    align-items: center;
+    text-align: center;
+    border-style: dotted;
+    border-color: aqua;
+    box-shadow: 20px,20px,0,0: solid palevioletred;
+
     }
-    #miFormulario {
-      background-color: #C8A2C8;
-      padding-top: 10px;
-      height: auto;
-      border-radius: 30px;
-      border: 3px dotted aqua;
-      text-align: center;
-      margin: 30px;
-      box-shadow: 10px 10px 0px 0px palevioletred;
+    body{
+        background-color: rgb(248, 71, 218);
     }
-    button {
-      background-color: rgb(207, 47, 135);
-      width: 300px;
-      height: 40px;
-      border-radius: 30px;
-      border-style: dotted;
-      border-color: rgb(140, 14, 104);
-      margin: 10px;
-      cursor: pointer;
-      font-weight: bold;
+    button{
+    background-color: rgb(207, 47, 135);
+        width: 300px;
+        border-radius: 30px;
+        border-style: dotted;
+        height: 40px;
     }
-    button:hover {
-      background-color: rgb(236, 115, 224);
+    button:hover{
+        background-color: rgb(236, 115, 224);
+        border-color: rgb(140, 14, 104);
     }
-    input {
-      border-radius: 20px;
-      width: 300px;
-      text-align: center;
-      border-style: dotted;
-      height: 40px;
-      margin: 10px;
+    .imagen{
+        width: 150px;
+        height: 140px;
+        align-items: center;
+        text-align: center;
+        border-radius: 20px;
+        border-style: double;
+        padding: 4px;
     }
-    .creeper, .imagen, .genshin {
-      border-radius: 20px;
-      padding: 4px;
-      border-style: double;
-      width: 100px;
+    #nombre{
+        border-radius: 20px;
+        width: 300px;
+        text-align: center;
+        border-style: dotted;
+        height: 40px;
     }
-    .imagen {
-      width: 150px;
-      height: 140px;
+    #video{
+        border-radius: 20px;
+        width: 300px;
+        text-align: center;
+        border-style: dotted;
+        height: 40px;
     }
-    .genshin {
-      width: 200px;
-      height: 130px;
+    .creeper{
+        width: 100px;
+        align-items: center;
+        text-align: center;
+        border-radius: 20px;
+        border-style: double;
+        padding: 4px;
     }
-    h1 {
-      color: aqua;
+    .creeper:hover{
+        transition: 3ms;
+        background-color: aqua;
+    }
+    .imagen:hover{
+        background-color: rgb(255, 13, 199);
+    }
+   
+    .genshin:hover{
+        transition: 3ms;
+        background-color: rgb(22, 185, 207);
+    }
+    h1{
+        border-radius: 30px;
+        color: aqua;
     }
   </style>
 </head>
 <body>
 
-  <form id="miFormulario">
-    <div>
-      <!-- Decoración superior -->
-      <img src="cree.gif" class="creeper">
-      <img src="cree.gif" class="creeper">
-      <img src="cree.gif" class="creeper">
-      <img src="cree.gif" class="creeper">
-      <img src="Captura de pantalla 2025-03-14 072725.png" class="imagen">
-      <img src="cree.gif" class="creeper">
-      <img src="cree.gif" class="creeper">
-    </div>
-
-    <h1>
-      <img src="corazon.jpg" class="creeper"> 🎊 feliz cumpleeeee 🎊 <img src="corazon.jpg" class="creeper">
-    </h1>
-
-    <div>
-      <img src="gato2.gif" class="creeper"> ⭐
-      <input type="text" id="nombre" name="nombre" placeholder="nombre" required> ⭐
-      <img src="ajolote.gif" class="creeper">
-    </div>
-
-    <div>
-      <img src="ajolote.gif" class="creeper"> ⭐
-      <input type="text" id="video" name="video" placeholder="videojuego favorito" required> ⭐
-      <img src="gato2.gif" class="creeper">
-    </div>
-
-    <div>
-      <button type="submit">Enviar</button>
-      <button type="button" id="login">Conectar con Spotify</button>
-      <button type="button" id="clearData">Borrar minutos guardados</button>
-    </div>
-
-    <p id="mensajeError" style="color:red;"></p>
-    <div id="output"></div>
-
-    <!-- Decoración inferior -->
-    <div>
-      <img src="minecraft.gif" class="creeper">
-      <img src="esqueleto.jpg" class="creeper">
-      <img src="minecraft.gif" class="creeper">
-    </div>
+  <form action="minecraft.html" method="get" id="miFormulario">
+  
+    <img src="cree.gif" alt="minecraft" class="creeper">
+    <img src="cree.gif" alt="minecraft" class="creeper">
+    <img src="cree.gif" alt="minecraft" class="creeper">
+    <img src="cree.gif" alt="minecraft" class="creeper">  <img src="Captura de pantalla 2025-03-14 072725.png" alt="imagen jsjsj" class="imagen">  <img src="cree.gif" alt="minecraft" class="creeper">
+    <img src="cree.gif" alt="minecraft" class="creeper">
+    <img src="cree.gif" alt="minecraft" class="creeper">
+    <img src="cree.gif" alt="minecraft" class="creeper">
+    
+    <br> <br>
+   
+    <h1> <img src="corazon.jpg" alt="minecraft" class="creeper">   <img src="corazon.jpg" alt="minecraft" class="creeper">   🎊feliz cumpleeeee🎊 <img src="corazon.jpg" alt="minecraft" class="creeper"> <img src="corazon.jpg" alt="minecraft" class="creeper"></h1>
+   
+    <br>
+    <img src="gato2.gif" alt="minecraft" class="creeper">
+    <label for="nombre"></label> ⭐
+    <input type="text" id="nombre" name="nombre" placeholder="nombre" required /> ⭐
+    <img src="ajolote.gif" alt="minecraft" class="creeper">
+    <br>
+    <img src="ajolote.gif" alt="minecraft" class="creeper">
+    ⭐<input type="text" id="video" name="video" placeholder="videojuego favorito" required /> ⭐
+    <img src="gato2.gif" alt="minecraft" class="creeper"><br>
+    <img src="gato2.gif" alt="minecraft" class="creeper">🌟
+    <button type="submit" class="button">Enviar</button>  🌟<img src="ajolote.gif" alt="minecraft" class="creeper">
+    <br> <br> <br> <br> 
+    
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
+    <img src="esqueleto.jpg" alt="minecraft" class="creeper">
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
   </form>
+
+  <p id="mensajeError" style="color: red;"></p>
 
   <script>
     alert("jsjjs holisss");
     alert("feliz cumpleeeee ");
     alert("espero te guste jsjsj");
 
-    const clientId = "c2d05e3f90e645a1828661c9d618f0d1";
-    const redirectUri = window.location.origin + window.location.pathname;
-    const scope = "user-read-recently-played";
-
-    function generateRandomString(length) {
-      const possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-      return Array.from({ length }, () => possible.charAt(Math.floor(Math.random() * possible.length))).join('');
-    }
-
-    async function generateCodeChallenge(codeVerifier) {
-      const encoder = new TextEncoder();
-      const data = encoder.encode(codeVerifier);
-      const digest = await crypto.subtle.digest('SHA-256', data);
-      return btoa(String.fromCharCode(...new Uint8Array(digest)))
-        .replace(/=/g, '')
-        .replace(/\+/g, '-')
-        .replace(/\//g, '_');
-    }
-
-    document.getElementById("login").addEventListener("click", async () => {
-      const codeVerifier = generateRandomString(64);
-      const codeChallenge = await generateCodeChallenge(codeVerifier);
-      localStorage.setItem("code_verifier", codeVerifier);
-
-      const args = new URLSearchParams({
-        response_type: "code",
-        client_id: clientId,
-        scope: scope,
-        redirect_uri: redirectUri,
-        code_challenge_method: "S256",
-        code_challenge: codeChallenge
-      });
-
-      window.location = "https://accounts.spotify.com/authorize?" + args;
-    });
-
-    document.getElementById("clearData").addEventListener("click", () => {
-      localStorage.removeItem("minutosRecientes");
-      location.reload();
-    });
-
-    async function fetchAccessToken(code) {
-      const codeVerifier = localStorage.getItem("code_verifier");
-
-      const body = new URLSearchParams({
-        grant_type: "authorization_code",
-        code: code,
-        redirect_uri: redirectUri,
-        client_id: clientId,
-        code_verifier: codeVerifier
-      });
-
-      const response = await fetch("https://accounts.spotify.com/api/token", {
-        method: "POST",
-        headers: { "Content-Type": "application/x-www-form-urlencoded" },
-        body: body
-      });
-
-      const data = await response.json();
-      return data.access_token;
-    }
-
-    async function getRecentTracks(token) {
-      const response = await fetch("https://api.spotify.com/v1/me/player/recently-played?limit=50", {
-        headers: { Authorization: `Bearer ${token}` }
-      });
-
-      const data = await response.json();
-      let trackMap = new Map();
-      let totalMs = 0;
-
-      data.items.forEach(item => {
-        const name = item.track.name;
-        const duration = item.track.duration_ms;
-        totalMs += duration;
-
-        if (trackMap.has(name)) {
-          trackMap.set(name, trackMap.get(name) + 1);
-        } else {
-          trackMap.set(name, 1);
-        }
-      });
-
-      const totalMinutes = Math.round(totalMs / 60000);
-      const stored = parseInt(localStorage.getItem("minutosRecientes") || "0");
-      const updated = stored + totalMinutes;
-      localStorage.setItem("minutosRecientes", updated);
-
-      const output = document.getElementById("output");
-      output.innerHTML = `
-        <div style="background:white; color:hotpink; padding:10px; font-weight:bold; border-radius:10px;">
-          ${updated} minutos
-        </div>
-        <div style="font-size:14px; color:white;">+${totalMinutes} nuevos minutos agregados de canciones recientes.</div>
-        <h4 style="color:white;">Canciones reproducidas</h4>
-        <div style="background:rgba(255,255,255,0.15); padding:10px; border-radius:10px; max-height:200px; overflow:auto;">
-          ${Array.from(trackMap.entries()).map(([name, count]) =>
-            `<div>${name} ${count > 1 ? `<span style="color:#80d8ff;">*${count}</span>` : ''}</div>`).join('')}
-        </div>`;
-    }
-
-    const urlParams = new URLSearchParams(window.location.search);
-    const code = urlParams.get("code");
-    if (code) {
-      fetchAccessToken(code).then(token => {
-        getRecentTracks(token);
-        window.history.replaceState({}, document.title, redirectUri);
-      }).catch(err => {
-        document.getElementById("output").innerHTML = `<p style="color:red;">Error: ${err.message}</p>`;
-      });
-    }
-
-    // Validación personalizada
     document.getElementById("miFormulario").addEventListener("submit", function(event) {
       const nombre = document.getElementById("nombre").value.trim().toLowerCase();
       const videojuego = document.getElementById("video").value.trim().toLowerCase();
@@ -252,4 +157,5 @@
   </script>
 </body>
 </html>
+
 
