--- a/index.html
+++ b/index.html
@@ -1,3 +1,183 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>🌟 nozo 🌟</title>
+  <style>
+    body {
+      background-color: rgb(248, 71, 218);
+      margin: 0;
+      font-family: sans-serif;
+    }
+
+    #miFormulario {
+      background-color: #C8A2C8;
+      color: rgb(232, 48, 155);
+      border-radius: 30px;
+      border: 2px dotted aqua;
+      padding: 20px;
+      margin: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      box-shadow: 20px 20px 0 palevioletred;
+    }
+
+    button {
+      background-color: rgb(207, 47, 135);
+      width: 90%;
+      max-width: 300px;
+      border-radius: 30px;
+      border: 2px dotted;
+      height: 40px;
+      margin-top: 10px;
+    }
+
+    button:hover {
+      background-color: rgb(236, 115, 224);
+      border-color: rgb(140, 14, 104);
+    }
+
+    .creeper, .imagen {
+      width: 100px;
+      max-width: 30%;
+      height: auto;
+      border-radius: 20px;
+      border-style: double;
+      padding: 4px;
+      margin: 4px;
+    }
+
+    .creeper:hover {
+      background-color: aqua;
+      transition: 0.3s;
+    }
+
+    .imagen:hover {
+      background-color: rgb(255, 13, 199);
+    }
+
+    h1 {
+      border-radius: 30px;
+      color: aqua;
+      text-align: center;
+    }
+
+    #nombre, #video {
+      border-radius: 20px;
+      width: 90%;
+      max-width: 300px;
+      text-align: center;
+      border-style: dotted;
+      height: 40px;
+      margin: 10px 0;
+    }
+
+    .imagenes {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 5px;
+    }
+
+    #mensajeError {
+      color: red;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+
+  <form action="minecraft.html" method="get" id="miFormulario">
+
+    <div class="imagenes">
+      <img src="cree.gif" alt="minecraft" class="creeper">
+      <img src="cree.gif" alt="minecraft" class="creeper">
+      <img src="cree.gif" alt="minecraft" class="creeper">
+      <img src="cree.gif" alt="minecraft" class="creeper">
+      <img src="Captura de pantalla 2025-03-14 072725.png" alt="imagen jsjsj" class="imagen">
+      <img src="cree.gif" alt="minecraft" class="creeper">
+      <img src="cree.gif" alt="minecraft" class="creeper">
+      <img src="cree.gif" alt="minecraft" class="creeper">
+      <img src="cree.gif" alt="minecraft" class="creeper">
+    </div>
+
+    <h1>
+      <img src="corazon.jpg" alt="minecraft" class="creeper">
+      <img src="corazon.jpg" alt="minecraft" class="creeper">
+      🎊 ¡Feliz cumpleeeee! 🎊
+      <img src="corazon.jpg" alt="minecraft" class="creeper">
+      <img src="corazon.jpg" alt="minecraft" class="creeper">
+    </h1>
+
+    <div class="imagenes">
+      <img src="gato2.gif" alt="minecraft" class="creeper">
+      ⭐ <input type="text" id="nombre" name="nombre" placeholder="nombre" required /> ⭐
+      <img src="ajolote.gif" alt="minecraft" class="creeper">
+    </div>
+
+    <div class="imagenes">
+      <img src="ajolote.gif" alt="minecraft" class="creeper">
+      ⭐ <input type="text" id="video" name="video" placeholder="videojuego favorito" required /> ⭐
+      <img src="gato2.gif" alt="minecraft" class="creeper">
+    </div>
+
+    <div class="imagenes">
+      <img src="gato2.gif" alt="minecraft" class="creeper">
+      🌟 <button type="submit" class="button">Enviar</button> 🌟
+      <img src="ajolote.gif" alt="minecraft" class="creeper">
+    </div>
+
+    <br><br>
+
+    <div class="imagenes">
+      <img src="minecraft.gif" alt="minecraft" class="creeper">
+      <img src="minecraft.gif" alt="minecraft" class="creeper">
+      <img src="minecraft.gif" alt="minecraft" class="creeper">
+      <img src="minecraft.gif" alt="minecraft" class="creeper">
+      <img src="esqueleto.jpg" alt="minecraft" class="creeper">
+      <img src="minecraft.gif" alt="minecraft" class="creeper">
+      <img src="minecraft.gif" alt="minecraft" class="creeper">
+      <img src="minecraft.gif" alt="minecraft" class="creeper">
+      <img src="minecraft.gif" alt="minecraft" class="creeper">
+    </div>
+  </form>
+
+  <p id="mensajeError"></p>
+
+  <script>
+    alert("jsjjs holisss");
+    alert("feliz cumpleeeee ");
+    alert("espero te guste jsjsj");
+
+    document.getElementById("miFormulario").addEventListener("submit", function(event) {
+      const nombre = document.getElementById("nombre").value.trim().toLowerCase();
+      const videojuego = document.getElementById("video").value.trim().toLowerCase();
+      const mensajeError = document.getElementById("mensajeError");
+
+      const nombreValido = ["nozo", "karla", "estefania"];
+      const videojuegoValido = {
+        "minecraft": "minecraft.html",
+        "undertale": "undertale.html",
+        "five nights at freddy's": "fnaf.html",
+        "sonic": "sonic.html",
+        "genshin impact": "genshin.html"
+      };
+
+      if (!nombreValido.includes(nombre) || !Object.keys(videojuegoValido).includes(videojuego)) {
+        mensajeError.textContent = 'Nombre o videojuego no válido';
+        event.preventDefault();
+      } else {
+        mensajeError.textContent = "";
+        event.preventDefault();
+        window.location.href = videojuegoValido[videojuego];
+      }
+    });
+  </script>
+
+</body>
+</html>
 
 
 
