--- a/index.html
+++ b/index.html
@@ -3,148 +3,128 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🌟 nozo 🌟</title>
+  <title> 🌟 nozo 🌟</title>
+  
   <style>
-    body {
-      background-color: rgb(248, 71, 218);
-      margin: 0;
-      font-family: sans-serif;
-    }
+    #miFormulario
+    { background-color: #C8A2C8;
+    padding-top: 10px;
+    height: 919px;
 
-    #miFormulario {
-      background-color: #C8A2C8;
-      color: rgb(232, 48, 155);
-      border-radius: 30px;
-      border: 2px dotted aqua;
-      padding: 20px;
-      margin: 10px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-shadow: 20px 20px 0 palevioletred;
-    }
+    color:rgb(232, 48, 155);
+    border-radius: 30px;
+    border-color: rgb(24, 44, 129);
+    align-items: center;
+    text-align: center;
+    border-style: dotted;
+    border-color: aqua;
+    box-shadow: 20px,20px,0,0: solid palevioletred;
 
-    button {
-      background-color: rgb(207, 47, 135);
-      width: 90%;
-      max-width: 300px;
-      border-radius: 30px;
-      border: 2px dotted;
-      height: 40px;
-      margin-top: 10px;
     }
-
-    button:hover {
-      background-color: rgb(236, 115, 224);
-      border-color: rgb(140, 14, 104);
+    body{
+        background-color: rgb(248, 71, 218);
     }
-
-    .creeper, .imagen {
-      width: 100px;
-      max-width: 30%;
-      height: auto;
-      border-radius: 20px;
-      border-style: double;
-      padding: 4px;
-      margin: 4px;
+    button{
+    background-color: rgb(207, 47, 135);
+        width: 300px;
+        border-radius: 30px;
+        border-style: dotted;
+        height: 40px;
     }
-
-    .creeper:hover {
-      background-color: aqua;
-      transition: 0.3s;
+    button:hover{
+        background-color: rgb(236, 115, 224);
+        border-color: rgb(140, 14, 104);
     }
-
-    .imagen:hover {
-      background-color: rgb(255, 13, 199);
+    .imagen{
+        width: 150px;
+        height: 140px;
+        align-items: center;
+        text-align: center;
+        border-radius: 20px;
+        border-style: double;
+        padding: 4px;
     }
-
-    h1 {
-      border-radius: 30px;
-      color: aqua;
-      text-align: center;
+    #nombre{
+        border-radius: 20px;
+        width: 300px;
+        text-align: center;
+        border-style: dotted;
+        height: 40px;
     }
-
-    #nombre, #video {
-      border-radius: 20px;
-      width: 90%;
-      max-width: 300px;
-      text-align: center;
-      border-style: dotted;
-      height: 40px;
-      margin: 10px 0;
+    #video{
+        border-radius: 20px;
+        width: 300px;
+        text-align: center;
+        border-style: dotted;
+        height: 40px;
     }
-
-    .imagenes {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 5px;
+    .creeper{
+        width: 100px;
+        align-items: center;
+        text-align: center;
+        border-radius: 20px;
+        border-style: double;
+        padding: 4px;
     }
-
-    #mensajeError {
-      color: red;
-      text-align: center;
+    .creeper:hover{
+        transition: 3ms;
+        background-color: aqua;
+    }
+    .imagen:hover{
+        background-color: rgb(255, 13, 199);
+    }
+   
+    .genshin:hover{
+        transition: 3ms;
+        background-color: rgb(22, 185, 207);
+    }
+    h1{
+        border-radius: 30px;
+        color: aqua;
     }
   </style>
 </head>
 <body>
 
   <form action="minecraft.html" method="get" id="miFormulario">
-
-    <div class="imagenes">
-      <img src="cree.gif" alt="minecraft" class="creeper">
-      <img src="cree.gif" alt="minecraft" class="creeper">
-      <img src="cree.gif" alt="minecraft" class="creeper">
-      <img src="cree.gif" alt="minecraft" class="creeper">
-      <img src="Captura de pantalla 2025-03-14 072725.png" alt="imagen jsjsj" class="imagen">
-      <img src="cree.gif" alt="minecraft" class="creeper">
-      <img src="cree.gif" alt="minecraft" class="creeper">
-      <img src="cree.gif" alt="minecraft" class="creeper">
-      <img src="cree.gif" alt="minecraft" class="creeper">
-    </div>
-
-    <h1>
-      <img src="corazon.jpg" alt="minecraft" class="creeper">
-      <img src="corazon.jpg" alt="minecraft" class="creeper">
-      🎊 ¡Feliz cumpleeeee! 🎊
-      <img src="corazon.jpg" alt="minecraft" class="creeper">
-      <img src="corazon.jpg" alt="minecraft" class="creeper">
-    </h1>
-
-    <div class="imagenes">
-      <img src="gato2.gif" alt="minecraft" class="creeper">
-      ⭐ <input type="text" id="nombre" name="nombre" placeholder="nombre" required /> ⭐
-      <img src="ajolote.gif" alt="minecraft" class="creeper">
-    </div>
-
-    <div class="imagenes">
-      <img src="ajolote.gif" alt="minecraft" class="creeper">
-      ⭐ <input type="text" id="video" name="video" placeholder="videojuego favorito" required /> ⭐
-      <img src="gato2.gif" alt="minecraft" class="creeper">
-    </div>
-
-    <div class="imagenes">
-      <img src="gato2.gif" alt="minecraft" class="creeper">
-      🌟 <button type="submit" class="button">Enviar</button> 🌟
-      <img src="ajolote.gif" alt="minecraft" class="creeper">
-    </div>
-
-    <br><br>
-
-    <div class="imagenes">
-      <img src="minecraft.gif" alt="minecraft" class="creeper">
-      <img src="minecraft.gif" alt="minecraft" class="creeper">
-      <img src="minecraft.gif" alt="minecraft" class="creeper">
-      <img src="minecraft.gif" alt="minecraft" class="creeper">
-      <img src="esqueleto.jpg" alt="minecraft" class="creeper">
-      <img src="minecraft.gif" alt="minecraft" class="creeper">
-      <img src="minecraft.gif" alt="minecraft" class="creeper">
-      <img src="minecraft.gif" alt="minecraft" class="creeper">
-      <img src="minecraft.gif" alt="minecraft" class="creeper">
-    </div>
+  
+    <img src="cree.gif" alt="minecraft" class="creeper">
+    <img src="cree.gif" alt="minecraft" class="creeper">
+    <img src="cree.gif" alt="minecraft" class="creeper">
+    <img src="cree.gif" alt="minecraft" class="creeper">  <img src="Captura de pantalla 2025-03-14 072725.png" alt="imagen jsjsj" class="imagen">  <img src="cree.gif" alt="minecraft" class="creeper">
+    <img src="cree.gif" alt="minecraft" class="creeper">
+    <img src="cree.gif" alt="minecraft" class="creeper">
+    <img src="cree.gif" alt="minecraft" class="creeper">
+    
+    <br> <br>
+   
+    <h1> <img src="corazon.jpg" alt="minecraft" class="creeper">   <img src="corazon.jpg" alt="minecraft" class="creeper">   🎊feliz cumpleeeee🎊 <img src="corazon.jpg" alt="minecraft" class="creeper"> <img src="corazon.jpg" alt="minecraft" class="creeper"></h1>
+   
+    <br>
+    <img src="gato2.gif" alt="minecraft" class="creeper">
+    <label for="nombre"></label> ⭐
+    <input type="text" id="nombre" name="nombre" placeholder="nombre" required /> ⭐
+    <img src="ajolote.gif" alt="minecraft" class="creeper">
+    <br>
+    <img src="ajolote.gif" alt="minecraft" class="creeper">
+    ⭐<input type="text" id="video" name="video" placeholder="videojuego favorito" required /> ⭐
+    <img src="gato2.gif" alt="minecraft" class="creeper"><br>
+    <img src="gato2.gif" alt="minecraft" class="creeper">🌟
+    <button type="submit" class="button">Enviar</button>  🌟<img src="ajolote.gif" alt="minecraft" class="creeper">
+    <br> <br> <br> <br> 
+    
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
+    <img src="esqueleto.jpg" alt="minecraft" class="creeper">
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
+    <img src="minecraft.gif" alt="minecraft" class="creeper">
   </form>
 
-  <p id="mensajeError"></p>
+  <p id="mensajeError" style="color: red;"></p>
 
   <script>
     alert("jsjjs holisss");
@@ -175,9 +155,9 @@
       }
     });
   </script>
-
 </body>
 </html>
+
 
 
 
