--- a/minecraft.html
+++ b/minecraft.html
@@ -2,129 +2,221 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Juego contra Sans</title>
+  <title>Pelea contra Sans</title>
   <style>
     body {
-      background-color: black;
-      color: white;
-      font-family: 'Arial', sans-serif;
-      text-align: center;
+      background-color: #94467d;
       margin: 0;
-      padding: 0;
+      font-family: monospace;
+      text-align: center;
     }
-
-    #hud {
-      margin-top: 20px;
-      font-size: 32px;
-      font-weight: bold;
-      color: #00ffea;
+    #contenedor {
+      margin-top: 40px;
     }
-
-    #sansImage {
-      width: 200px;
-      margin-top: 20px;
-    }
-
-    button {
-      margin: 10px;
-      padding: 10px 20px;
-      font-size: 18px;
-      border: none;
-      border-radius: 5px;
-      background-color: #00ffea;
-      color: black;
-      cursor: pointer;
-      display: none;
-    }
-
     canvas {
-      background-color: #111;
-      margin-top: 30px;
+      background: black;
+      border: 2px solid cyan;
+      display: block;
+      margin: 0 auto;
+    }
+    #hp {
+      color: red;
+      font-size: 20px;
+      margin-top: 10px;
+    }
+    #fase {
+      color: blueviolet;
+      margin-top: 10px;
+      font-size: 20px;
+      border: 2px dotted cyan;
+      display: inline-block;
+      padding: 5px 15px;
+    }
+    #sans {
+      width: 40px;
+      height: auto;
+      margin-bottom: 10px;
+    }
+    #victoria {
+      display: none;
+      color: cyan;
+      font-size: 28px;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <h1>¡Pelea contra Sans!</h1>
-  <div id="hud"></div>
-  <img id="sansImage" src="Sans.webp" alt="Sans" />
-  <br />
-  <button id="retryBtn" onclick="location.reload()">Reintentar</button>
-  <button id="backBtn" onclick="window.location.href='index.html'">Volver</button>
-  <button id="victoryBtn">Victoria</button>
-
-  <canvas id="gameCanvas" width="600" height="400"></canvas>
+  <div id="contenedor">
+    <img src="Sans.webp" id="sans" alt="Sans">
+    <div id="fase">Fase: 1</div>
+    <canvas id="gameCanvas" width="600" height="400"></canvas>
+    <div id="hp">❤️ HP: 100</div>
+    <div id="victoria">🎉 ¡Victoria!</div>
+  </div>
 
   <script>
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d");
+    const hpEl = document.getElementById("hp");
+    const faseEl = document.getElementById("fase");
+    const victoriaEl = document.getElementById("victoria");
 
-    const hud = document.getElementById("hud");
-    const retryBtn = document.getElementById("retryBtn");
-    const backBtn = document.getElementById("backBtn");
-    const victoryBtn = document.getElementById("victoryBtn");
-    const sansImage = document.getElementById("sansImage");
-
-    const sansImages = {
-      normal: "Sans.webp",
-      final: "sans final.gif"
+    const player = {
+      x: 290,
+      y: 190,
+      size: 20,
+      color: "red",
+      speed: 5,
+      hp: 100,
     };
 
-    // Simulación de variables del juego
-    let hp = 100;
-    let phase = 3;
-    let bones = []; // se vacía al ganar
-    let finalWaveReleased = true; // cambiar a true al final
+    let fase = 1;
+    let frame = 0;
+    let attacks = [];
+    let keys = {};
+    let gameOver = false;
 
-    // Simulación de daño o victoria (para prueba)
     document.addEventListener("keydown", (e) => {
-      if (e.key === "d") {
-        hp = 0; // derrota
-      } else if (e.key === "v") {
-        bones = []; // victoria
-      }
+      keys[e.key] = true;
     });
 
-    function checkVictory() {
-      if (phase === 3 && finalWaveReleased && bones.length === 0 && hp > 0) {
-        hud.innerHTML = "🎉 ¡Victoria!";
-        hud.style.display = "block";
-        sansImage.src = sansImages.final;
-        retryBtn.style.display = "inline-block";
-        backBtn.style.display = "inline-block";
-        victoryBtn.style.display = "inline-block";
+    document.addEventListener("keyup", (e) => {
+      keys[e.key] = false;
+    });
 
-        setTimeout(() => {
-          window.location.href = "minecraft.html";
-        }, 3000);
+    function updatePlayer() {
+      if (keys["ArrowUp"] && player.y > 0) player.y -= player.speed;
+      if (keys["ArrowDown"] && player.y + player.size < canvas.height) player.y += player.speed;
+      if (keys["ArrowLeft"] && player.x > 0) player.x -= player.speed;
+      if (keys["ArrowRight"] && player.x + player.size < canvas.width) player.x += player.speed;
+    }
+
+    function spawnAttack() {
+      if (fase === 1) {
+        if (frame % 30 === 0) {
+          attacks.push({
+            x: Math.random() * canvas.width,
+            y: 0,
+            size: 20,
+            speed: 4,
+          });
+        }
+      } else if (fase === 2) {
+        if (frame % 20 === 0) {
+          attacks.push({
+            x: Math.random() * canvas.width,
+            y: 0,
+            size: 20,
+            speed: 6,
+          });
+        }
+      } else if (fase === 3) {
+        if (frame % 10 === 0) {
+          attacks.push({
+            x: Math.random() * canvas.width,
+            y: 0,
+            size: 25,
+            speed: 8,
+          });
+        }
       }
     }
 
-    function checkDefeat() {
-      if (hp <= 0) {
-        hud.innerHTML = "💀 Has muerto...";
-        hud.style.display = "block";
-        sansImage.src = sansImages.final;
-        retryBtn.style.display = "inline-block";
-        backBtn.style.display = "inline-block";
+    function updateAttacks() {
+      attacks.forEach((a) => {
+        a.y += a.speed;
+      });
+
+      attacks = attacks.filter((a) => a.y < canvas.height);
+
+      for (let a of attacks) {
+        if (
+          player.x < a.x + a.size &&
+          player.x + player.size > a.x &&
+          player.y < a.y + a.size &&
+          player.y + player.size > a.y
+        ) {
+          player.hp -= 1;
+        }
       }
+    }
+
+    function drawPlayer() {
+      ctx.fillStyle = player.color;
+      ctx.fillRect(player.x, player.y, player.size, player.size);
+    }
+
+    function drawAttacks() {
+      ctx.fillStyle = "white";
+      for (let a of attacks) {
+        ctx.fillRect(a.x, a.y, a.size, a.size);
+      }
+    }
+
+    function checkFase() {
+      if (frame > 600 && fase === 1) {
+        fase = 2;
+        faseEl.textContent = "Fase: 2";
+        attacks = [];
+      } else if (frame > 1200 && fase === 2) {
+        fase = 3;
+        faseEl.textContent = "Fase: 3";
+        attacks = [];
+      } else if (frame > 1800 && fase === 3) {
+        endGame(true);
+      }
+    }
+
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      drawPlayer();
+      drawAttacks();
     }
 
     function update() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      if (gameOver) return;
 
-      // Aquí irían los dibujos del jugador y ataques
-      ctx.fillStyle = "red";
-      ctx.fillRect(290, 190, 20, 20); // corazón
+      frame++;
+      updatePlayer();
+      spawnAttack();
+      updateAttacks();
+      draw();
 
-      checkVictory();
-      checkDefeat();
+      checkFase();
+
+      hpEl.textContent = `❤️ HP: ${player.hp}`;
+      if (player.hp <= 0) {
+        endGame(false);
+      }
 
       requestAnimationFrame(update);
+    }
+
+    function endGame(win) {
+      gameOver = true;
+      if (win) {
+        victoriaEl.style.display = "block";
+        // Esperar 3 segundos y redirigir a Spotify
+        setTimeout(() => {
+          const clientId = "TU_CLIENT_ID";
+          const redirectUri = "TU_REDIRECT_URI";
+          const scope = "user-read-recently-played";
+          const verifier = btoa([...crypto.getRandomValues(new Uint8Array(32))]
+            .map(x => String.fromCharCode(x)).join(''))
+            .replace(/\+/g, '-').replace(/\//g, '_').replace(/=+$/, '');
+          sessionStorage.setItem("verifier", verifier);
+          const challenge = verifier; // simplificado, normalmente deberías hacer SHA256 base64url
+          window.location.href = `https://accounts.spotify.com/authorize?response_type=code&client_id=${clientId}&scope=${scope}&redirect_uri=${encodeURIComponent(redirectUri)}&code_challenge_method=plain&code_challenge=${challenge}`;
+        }, 3000);
+      } else {
+        alert("Has perdido. Recarga para intentar de nuevo.");
+      }
     }
 
     update();
   </script>
 </body>
 </html>
+
 
 
